# qise

./: .gitignore  Anthropic_claude_proxy.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  build_plan.md  index.html  pyproject.toml  qise_product_spec_v0.1.md  shield.example.yaml
.github/workflows/: desktop-release.yml  windows-desktop.yml  workflow.yml
data/prompts/: audit_guard_examples.yaml  command_guard_examples.yaml  exfil_guard_examples.yaml  prompt_guard_examples.yaml  reasoning_guard_examples.yaml  resource_guard_examples.yaml
data/security_contexts/: database_write.yaml  network_operations.yaml  tool_safety.yaml
data/threat_patterns/: indirect_injection_via_tool.yaml  supply_chain_attack.yaml  tool_poisoning.yaml
docker/: Dockerfile.hermes  Dockerfile.nexau  Dockerfile.openai-agents  Dockerfile.qise-bridge  Dockerfile.qise-proxy
docker/sandbox/: build.sh  docker-compose.yml  restrict_network.sh  shield.yaml  test_all.sh  test_e2e_attack_scenarios.py  test_hermes.py  test_nexau.py  test_openai_agents.py  test_proxy_live.py
docker/sandbox/hermes-plugin/: __init__.py  plugin.yaml
docs/: architecture.md  claude-code.md  codex.md  current-state-audit.md  data-formats.md  events.md  guards.md  install.md  integration.md  openclaw.md  performance.md  preflight-scan.md  privacy.md  quickstart.md  release-checklist.md  roadmap.md  runtime-observer.md  threat-model.md  troubleshooting.md
eval/: README.md  runner.py
eval/converters/: __init__.py  agentdojo.py  agentharm.py  cyberseceval.py
eval/datasets/: exfil_attacks.yaml  injection_attacks.yaml  reasoning_attacks.yaml  safe_operations.yaml
eval/datasets/.cache/: cyberseceval_prompt_injection.json
eval/results/: baseline_cyberseceval_rules.md  baseline_rules.md  round12_prompt_optimization.md  round14_real_slm.md  round14_rules_only.md  round15_live_testing.md
examples/: langgraph_example.py  langgraph_live_test.py  mcp-dangerous.json  mcp-safe.json  mcp_live_test.py  mcp_real_verify.py  model_integration_example.py  nanobot_live_test.py  nexau_example.py  openai_agents_example.py  openai_agents_live_test.py  prompt_optimization_verify.py  proxy_live_test.py  proxy_real_verify.py  proxy_sii_verify.py  proxy_streaming_example.py  real_model_verify.py  real_slm_verify.py  slm_integration.py  sse_streaming_verify.py
examples/skills/dangerous/: SKILL.md  install.sh  manifest.json
examples/skills/safe/: SKILL.md  manifest.json
model_training/: README.md
model_training/configs/: training_config.yaml
model_training/datasets/synthetic/: task10_synthetic.jsonl  task2_synthetic.jsonl  task3_synthetic.jsonl  task4_synthetic.jsonl  task5_synthetic.jsonl  task6_synthetic.jsonl  task7_synthetic.jsonl  task8_synthetic.jsonl  task9_synthetic.jsonl
model_training/docs/: dataset_catalog.md
model_training/scripts/: analyze_coverage.py  convert.py  download.py  synthesize.py  validate.py
progress/: mvp_plan.md  round_10.md  round_13.md
qise_desktop_ui_mockups/html/: 01_home_portal.html  02_preflight_scan.html  03_security_events.html  04_protection_rules.html  05_system_doctor.html  06_local_slm.html  07_runtime_observer.html  08_backup_restore.html  09_application_settings.html  10_home_loading_skeleton.html
scripts/: benchmark_slm.py  build-desktop-runtime.py  build-desktop-runtime.sh  check_release_version.py  check_updater_signing_key.py  demo_mvp.py  demo_mvp.sh  demo_scan.py  demo_scan.sh  e2e_tauri_test.py  setup_slm.sh
src-proxy/: Cargo.toml
src-proxy/src/: config.rs  decision.rs  guard_client.rs  main.rs  parser.rs  proxy.rs  streaming.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  commands.rs  decision.rs  guard_client.rs  lib.rs  main.rs  parser.rs  proxy.rs  qise_cli.rs  streaming.rs  takeover.rs  tray.rs
src-ui/: index.html  package-lock.json  package.json  tailwind.config.js
src-ui/src/: App.tsx  index.css
src-ui/src/components/: AgentPanel.tsx  ConfigPanel.tsx  DiagnosticsPanel.tsx  EventLog.tsx  GuardList.tsx  ProxyToggle.tsx  StatusIndicator.tsx
src-ui/src/hooks/: useAppUpdater.ts
src-ui/src/lib/: api.ts  appUpdater.test.ts  appUpdater.ts  locale.ts
src/qise/: __init__.py  __main__.py  cli.py  mcp_server.py
src/qise/adapters/: __init__.py  base.py  hermes.py  langgraph.py  nanobot.py  nexau.py  openai_agents.py
src/qise/bridge/: __init__.py  cli.py  protocol.py  server.py
src/qise/core/: __init__.py  baseline_db.py  config.py  config_watcher.py  event_logger.py  guard_base.py  metrics.py  models.py  (+3 more)
tests/: test_adapters.py  test_adapters_new.py  test_audit_guard.py  test_baseline_db.py  test_baseline_manager.py  test_bridge_ws.py  test_cli.py  test_command_guard.py  test_context_guard.py  test_credential_guard.py  test_deep_integration.py  test_event_logger.py  test_exfil_guard.py  test_filesystem_guard.py  test_full_pipeline.py  test_full_pipeline_14.py  test_guard_base_config.py  test_mcp_integration.py  test_model_router_real.py  test_network_guard.py  test_ollama_compat.py  test_output_guard.py  test_pattern_loader.py  test_performance.py  test_pipeline_with_guards.py  test_product_cli.py  test_product_service.py  test_prompt_guard.py  test_proxy.py  test_proxy_streaming.py  test_real_slm_guard.py  test_reasoning_guard.py  test_release_version.py  test_resource_guard.py  test_round8_fixes.py  test_security_context_e2e.py  test_session_tracker.py  test_supply_chain_guard.py  test_tool_policy_guard.py  test_tool_sanity_guard.py  (+1 more)
tests/fixtures/: tool_read_file_poisoned_baseline.yaml
(+64 files in other folders)
