[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qise"
version = "0.1.0"
description = "AI-first runtime security framework for AI agents"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.11"
authors = [
    { name = "Qise Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Free For Educational Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "httpx>=0.25",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
qise = "qise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qise"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
