[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qise"
version = "0.2.0"
description = "AI-first runtime security framework for AI agents — 14 guards, 5 framework adapters, structured SLM prompts, sub-ms rule checks"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.11"
authors = [
    { name = "Qise Team" },
]
keywords = [
    "ai-security",
    "agent-security",
    "prompt-injection",
    "guardrails",
    "llm-security",
    "ai-agent",
    "runtime-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Free For Educational Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pydantic",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "httpx>=0.25",
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/opq-qise/qise"
Documentation = "https://github.com/opq-qise/qise/tree/main/docs"
Repository = "https://github.com/opq-qise/qise"
Issues = "https://github.com/opq-qise/qise/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
proxy = [
    "watchfiles>=0.20",
]

[project.scripts]
qise = "qise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qise"]
artifacts = [
    "src/qise/data/threat_patterns/*.yaml",
    "src/qise/data/security_contexts/*.yaml",
    "src/qise/data/baselines/*.yaml",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
